--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-/* No CSS */
+.site{display:-webkit-box;display:-ms-flexbox;display:flex;min-height:100vh;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.main{-webkit-box-flex:1;-ms-flex:1;flex:1}body{background:#e5e5e5}.navbar{background:#202020}.navbar ul{list-style:none}
