Added Junior Bridesmaids cards and H2 for section id's

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,6 +98,9 @@ section {
 /* Wedding Party Page Styling */
 /* Section Styling */
 .bridal-party-section {
+  h2 {
+    text-align: center;
+  }
 
   .wedding-party-card {
     background: $lightest-grey;
