--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,15 +98,26 @@ section {
 /* Wedding Party Page Styling */
 /* Section Styling */
 .bridal-party-section {
+  margin: 0 auto;
+  width: 75%;
+
   h2 {
     text-align: center;
   }
 
-  .wedding-party-card {
+  .venue-name {
+    text-align: left;
+  }
+
+  .venue-name a {
+    color: $main-maroon;
+  }
+
+  .image-card {
     background: $lightest-grey;
     border: .5rem solid $lightest-grey;
     margin: 1rem auto;
-    width: 75%;
+    width: 100%;
 
     img {
       width: 100%;
