--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,10 +98,11 @@ section {
 /* Wedding Party Page Styling */
 /* Section Styling */
 .bridal-party-section {
-  margin: 0 auto;
+  margin: 3rem auto;
   width: 75%;
 
   h2 {
+    margin-bottom: 1.5rem;
     text-align: center;
   }
 
@@ -116,7 +117,12 @@ section {
   .image-card {
     background: $lightest-grey;
     border: .5rem solid $lightest-grey;
-    margin: 1rem auto;
+    box-shadow: 0 1px 1px rgba(0,0,13%,0.08), 
+                0 2px 2px rgba(0,0,13%,0.08), 
+                0 4px 4px rgba(0,0,13%,0.08), 
+                0 8px 8px rgba(0,0,13%,0.08),
+                0 16px 16px rgba(0,0,13%,0.08);
+    margin-bottom: 3rem;
     width: 100%;
 
     img {
