Added 3 new wedding-party images to website

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -167,6 +167,14 @@ section {
     .emily-furrer {
       background: #594570;
     }
+
+    .werner {
+      background: #32262B;
+    }
+
+    .young {
+      background: #B2978C;
+    }
   }
 }
 
