Added new bridesmaids photos

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -189,6 +189,14 @@ section {
     .young {
       background: #B2978C;
     }
+
+    .audrey-ryan {
+      background: #2F4345;
+    }
+
+    .jillian-ryan {
+      background: #302B33;
+    }
   }
 }
 
