--- a/css/css-reset.css
+++ b/css/css-reset.css
@@ -22,16 +22,16 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 [id] {
   scroll-margin-top: 2ex;
 }
 
-
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
+ul[role='list'],
+ol[role='list'] {
   list-style: none;
 }
 
