--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -66,10 +66,11 @@ section {
 
 .photo-card {
   background: $white;
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.027),
-    0 2.4px 5.3px rgba(0, 0, 0, 0.035), 0 4.5px 10px rgba(0, 0, 0, 0.041),
-    0 8px 17.9px rgba(0, 0, 0, 0.047), 0 15px 33.4px rgba(0, 0, 0, 0.055),
-    0 36px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 0.9px 2.2px -2px rgba(0, 0, 0, 0.028),
+    0 2.1px 5.3px -2px rgba(0, 0, 0, 0.04), 0 4px 10px -2px rgba(0, 0, 0, 0.05),
+    0 7.1px 17.9px -2px rgba(0, 0, 0, 0.06),
+    0 13.4px 33.4px -2px rgba(0, 0, 0, 0.072),
+    0 32px 80px -2px rgba(0, 0, 0, 0.1);
 
   padding: 1rem;
   width: auto;
@@ -257,15 +258,30 @@ footer {
       div {
         display: flex;
         margin: 0 auto;
-        // width: 90%;
         place-content: center;
 
         img {
-          // aspect-ratio: 1/1;
           height: auto;
           margin: 0 1rem;
-          // overflow: none;
           width: 50%;
+        }
+      }
+    }
+
+    #wedding-party {
+      article {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+
+        h2 {
+          // flex-grow: 1;
+          flex-basis: 100%;
+          text-align: center;
+        }
+        .photo-card {
+          margin: 0 1rem;
+          max-width: 45%;
         }
       }
     }
