Added Photos page

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -139,6 +139,10 @@ body {
         }
       }
     }
+
+    /*-----Photos-----*/
+    #photos {
+    }
     /*-----Wedding Party-----*/
     #wedding-party {
       article {
