--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -165,10 +165,15 @@ body {
           margin-bottom: 5rem;
           img {
             aspect-ratio: 1/1;
+            // flex-basis: 100%;
             height: auto;
             margin-bottom: 0.5rem;
             object-fit: contain;
             width: 100%;
+          }
+
+          .cover {
+            object-fit: cover;
           }
 
           .title {
