--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -259,6 +259,7 @@ body {
         }
         article {
           h3 {
+            text-align: center;
             margin-bottom: 1.5rem;
             a {
               color: $maroon;
@@ -281,11 +282,13 @@ body {
 
         div {
           #hotel-book-online {
-            outline-color: $gray-dark;
+            background: $navy;
+            outline-color: $navy;
           }
           #hotel-call-now {
             background: none;
-            color: $gray-dark;
+            color: $navy;
+            outline-color: $navy;
           }
         }
       }
